--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>New formulaire</h1>
     <form action="Newformulaire.php" method="post">
         <div>
         <label for="name">Nom</label>
