--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <input type="text" id="name" name="user_name">
         </div>
         <div>
-            <label for="password">Nom</label>
+            <label for="password">Mot de passe</label>
             <input type="password" id="password" name="user_name">
         </div>
         <div>
-            <label for="date">Nom</label>
+            <label for="date">Date de naissance</label>
             <input type="date" id="date" name="user_name">
         </div>
         <div>
