--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <input type="checkbox" id="x" name="sexe" value="x">
         </div>
         <button type="submit" name="user_name">Envoyer</button>
+        <input type="reset" VALUE="Annuler" onclick="annuler();">
     </form>
 </body>
 </html>
