--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <input type="checkbox" id="x" name="sexe" value="x">
         </div>
         <button type="submit" name="user_name">Envoyer</button>
-        <input type="reset" VALUE="Annuler">
+        <input type="reset" value="Annuler">
     </form>
 </body>
 </html>
