--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <label for="x">x</label>
             <input type="checkbox" id="x" name="sexe" value="x">
         </div>
-        <button type="submit" name="user_name">Envoyer</button>
+        <a href="mailto:amaury.jocaille@hotmail.com">
+        <input type="button" value="Envoyer"></a>
         <input type="reset" value="Annuler">
     </form>
 </body>
